# pdns

./: .check-formatting  .clang-format  .clang-format.full  .clang-tidy.braces  .clang-tidy.bugs  .clang-tidy.full  .cvsignore  .dockerignore  .gitattributes  .gitignore  .gitmodules  .not-formatted  .ruff.toml  .travis.yml  .valgrindrc  AI_POLICY.md  AUTHORS  BUILDING-PACKAGES.md  Brewfile  CODE_COVERAGE.md  CODING_GUIDELINES.md  CONTRIBUTING.md  COPYING  ChangeLog  ChangeLog.old  DCO  DEVELOPMENT.md  Docker-README.md  Dockerfile-auth  Dockerfile-cifuzz  Dockerfile-dnsdist  Dockerfile-recursor  Dockerfile-recursor-redis  GOALS  HACKING  INSTALL  Kubernetes-README.md  LICENSE.txt  Makefile-recursor  Makefile-recursor.win32  (+181 more)
backends/bind/: Makefile.am  Makefile.in  bindbackend.cc  bindbackend.hh  bindbackend2.cc  bindbackend2.hh  bindlexer.c  bindlexer.l  bindparser.cc  bindparser.h  bindparser.hh  bindparser.yy  huffman.hh  zone2ldap.cc  zone2sql.cc  zoneparser.hh  zoneparser2.cc
contrib/pblogger-rs/: Cargo.toml  build.rs
docs/: .cvsignore  .gitignore  Dockerfile  Makefile  Makefile.am  Makefile.sphinx  catalog.rst  checklinks.sh  conf.py  depfile.py  dnsupdate.rst  domainmetadata.rst  extract.cc  features.rst  generate-docs.py  generate-jsonschema.py  generate-man-pages.py  index.rst  indexTOC.rst  installation.rst  lua-records.rst  migration.rst  mkdocs.yml  modes-of-operation.rst  operating.rst  pdns.sgml  pdns_recursor.1.txt  pdns_server.8  performance.rst  powerdns-case.sgml  powerdns-overview.sgml  powerdns-technical.sgml  process-md.sh  rec_control.1.txt  requirements.in  requirements.txt  running.rst  satyam.txt  secpoll-check.sh  secpoll.zone  (+6 more)
docs/MIBS/: DNSDIST-MIB.txt
docs/WIP/: alias.md  luapolicy.xml  web-api.md
docs/_static/: extra.css  pdns.css
docs/appendices/: EOL.rst  FAQ.rst  backend-writers-guide.rst  compiling.rst  crypto-export.rst  index.rst  internals.rst  types.rst
docs/authoritative/: security.rst
docs/backends/: bind.rst  generic-mysql.rst  generic-odbc.rst  generic-oracle.rst  generic-postgresql.rst  generic-sql.rst  generic-sqlite3.rst  geoip.rst  geosql.rst  index.rst  ldap.rst  lmdb.rst  lua.rst  lua2.rst  mydns.rst  opendbx.rst  oracle.rst  pipe.rst  random.rst  remote.rst  tinydns.rst
docs/changelog/: 4.0.rst  4.1.rst  4.2.rst  4.3.rst  4.4.rst  4.5.rst  4.6.rst  4.7.rst  4.8.rst  4.9.rst  5.0.rst  5.1.rst  index.rst  pre-4.0.rst
docs/common/: license.rst  secpoll.rst  security-policy.rst  tarball-pgp-keys.rst
docs/dnssec/: advice.rst  index.rst  intro.rst  migration.rst  modes-of-operation.rst  operational.rst  pdnsutil.rst  pkcs11.rst  profile.rst
docs/guides/: addingrecords.rst  algoroll.rst  alias.rst  basic-database.rst  edns-cookies.rst  index.rst  kskroll.rst  kskrollcdnskey.rst  recursion.rst  svcb.rst  virtual-instances.rst  zskroll.rst
docs/http-api/: autoprimaries.rst  cache.rst  cryptokey.rst  cryptokeyitem.rst  endpoint-cryptokeys.rst  endpoint-search.rst  endpoint-zone-metadata.rst  endpoint-zones.rst  index.rst  metadata.rst  networks.rst  search.rst  server.rst  statistics.rst  tsigkey.rst  views.rst  zone-properties.rst  zone.rst  zonemetadata.rst
docs/lua-records/: functions.rst  index.rst
docs/manpages/: calidns.1.md  calidns.1.rst  dnsbulktest.1.md  dnsbulktest.1.rst  dnsdist.1.md  dnsgram.1.md  dnsgram.1.rst  dnspcap2calidns.1.rst  dnspcap2protobuf.1.md  dnspcap2protobuf.1.rst  dnsreplay.1.md  dnsreplay.1.rst  dnsscan.1.md  dnsscan.1.rst  dnsscope.1.md  dnsscope.1.rst  dnstcpbench.1.md  dnstcpbench.1.rst  dnswasher.1.md  dnswasher.1.rst  dumresp.1.md  dumresp.1.rst  index.rst  ixfrdist.1.rst  ixfrdist.yml.5.rst  ixplore.1.md  ixplore.1.rst  notify.1.md  nproxy.1.md  nproxy.1.rst  nsec3dig.1.md  nsec3dig.1.rst  pdns_control.1.md  pdns_control.1.rst  pdns_notify.1.md  pdns_notify.1.rst  pdns_recursor.1.md  pdns_server.1.md  pdns_server.1.rst  pdns_server.8.rst  (+14 more)
docs/markdown/: changelog.md  changelog.md.raw  changelog.raw.md  end-of-life.md  index.md  process-includes.py  types.md
docs/security-advisories/: index.rst  powerdns-advisory-2006-01.rst  powerdns-advisory-2008-02.rst  powerdns-advisory-2008-03.rst  powerdns-advisory-2012-01.rst  powerdns-advisory-2015-01.rst  powerdns-advisory-2015-02.rst  powerdns-advisory-2015-03.rst  powerdns-advisory-2016-01.rst  powerdns-advisory-2016-02.rst  powerdns-advisory-2016-03.rst  powerdns-advisory-2016-04.rst  powerdns-advisory-2016-05.rst  powerdns-advisory-2017-04.rst  powerdns-advisory-2018-02.rst  powerdns-advisory-2018-03.rst  powerdns-advisory-2018-05.rst  powerdns-advisory-2019-03.rst  powerdns-advisory-2019-04.rst  powerdns-advisory-2019-05.rst  powerdns-advisory-2019-06.rst  powerdns-advisory-2020-05.rst  powerdns-advisory-2020-06.rst  powerdns-advisory-2021-01.rst  powerdns-advisory-2025-02.rst  powerdns-advisory-2026-05.rst  powerdns-advisory-2026-06.rst  powerdns-advisory-2026-07.rst  security-policy.rst
ext/arc4random/: Makefile.am  arc4random.c  arc4random.h  arc4random.hh  includes.h  log.h  meson.build
ext/lmdb-safe/: LICENSE  Makefile.am  lmdb-safe.cc  lmdb-safe.hh  lmdb-typed.cc  lmdb-typed.hh  meson.build
meson-archive/: meson_options.txt
meson-archive/bison/: meson.build
meson-archive/code-coverage/: meson.build
meson-archive/geoip/: meson.build
meson-archive/lto/: meson.build
modules/: .gitignore  Makefile.am  meson.build
pdns/: .cvsignore  .gitignore  AUTH-MIB.txt  Makefile-recursor  Makefile-recursor.win32  Makefile.am  Makefile.in  PowerDNS Recursor.sln  PowerDNS Recursor.vcproj  README  README-dnsdist.md  README-recursor  TODO  ahuexception.hh  anadns.hh  argtng.hh  arguments.cc  arguments.hh  ascii.hh  auth-caches.cc  auth-caches.hh  auth-carbon.cc  auth-catalogzone.cc  auth-catalogzone.hh  auth-domaincache.cc  auth-domaincache.hh  auth-main.cc  auth-main.hh  auth-packetcache.cc  auth-packetcache.hh  auth-primarycommunicator.cc  auth-querycache.cc  auth-querycache.hh  auth-secondarycommunicator.cc  auth-zonecache.cc  auth-zonecache.hh  axfr-retriever.cc  axfr-retriever.hh  base32.cc  base32.hh  (+611 more)
pdns/aes/: aes.h  (+6 more)
(+5302 files in other folders)
